--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,11 +38,18 @@ h1 {
     border-right: 1px solid black;
 }
 
+.img-container {
+    position: relative;
+    overflow: hidden;
+    height: 100%;
+}
+
 .img-container img {
     width: 100%;
-    height: 90%;
+    height: 100%;
     object-fit: cover;
     position: absolute;
+    top: -15%;
 }
 
 .img-credit {
@@ -71,7 +78,6 @@ h1 {
     align-items: center;
     height: 100vh;
     text-align: center;
-    /* This will affect inline or inline-block elements like text and buttons */
 }
 
 .new-btn {
@@ -110,9 +116,9 @@ h1 {
 
 .edit-btn,
 .delete-btn {
-    padding: 6px 12px; /* Adjust padding to align buttons */
-    width: auto; /* Remove full width for buttons */
-    margin: 0; /* Reset margin for buttons */
+    padding: 6px 12px;
+    width: auto;
+    margin: 0;
 }
 
 .abilities-multiple {
@@ -127,40 +133,40 @@ h1 {
 
 table {
     border-collapse: collapse;
-    margin: auto;
-    table-layout: fixed;
-    width: auto; /* Or you could use a percentage or fixed width, e.g., 80% or 960px */
-    margin: 0 auto; /* This will center the table on the page */
-    max-width: 100%; /* This prevents the table from exceeding the width of its container */
-    overflow-x: auto; /* Allows for horizontal scrolling on smaller screens */
+    table-layout: auto;
+    width: 100%;
+    margin: 0 auto;
+    overflow-x: auto;
+
+    th {
+        background-color: #333;
+        color: #fff;
+    }
+
+    td {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        max-width: 200px;
+        height: auto;
+        white-space: nowrap;
+    }
+
+    th,
+    td {
+        border: 1px solid black;
+        padding: 0.4rem;
+        font-size: 0.9rem;
+    }
+
+    tbody tr:nth-child(odd) {
+        background-color: #f9f9f9;
+    }
+
+    tbody tr:nth-child(even) {
+        background-color: #e9e9e9;
+    }
 }
 
-th,
-td {
-    border: 1px solid black;
-    padding: 10px;
-    word-wrap: break-word;
-    
-}
-
-#dragons-table tbody tr td:nth-child(12) {
-    max-width: 200px; /* Adjust the value as needed */
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    cursor: pointer; /* Change cursor to indicate clickable */
-}
-thead {
-    background-color: #333;
-    color: #fff;
-}
-tbody tr:nth-child(odd) {
-    background-color: #f9f9f9;
-}
-
-tbody tr:nth-child(even) {
-    background-color: #e9e9e9;
-}
 form {
     width: 80%;
     margin: 0 auto;
@@ -211,7 +217,7 @@ input[type="button"] {
 
 button {
     font-size: 14px;
-    white-space: nowrap; 
+    white-space: nowrap;
 }
 
 button:hover {
@@ -243,9 +249,9 @@ input[type="button"]:focus {
 }
 
 #searchBox {
-    width: 100%; /* Example width */
-    padding: 8px; /* Adjust padding as needed */
-    box-sizing: border-box; /* Include padding and border in the element's total width and height */
+    width: 100%;
+    padding: 8px;
+    box-sizing: border-box;
 }
 
 .faux-option {
@@ -256,7 +262,52 @@ input[type="button"]:focus {
     border: 1px solid #ccc;
     cursor: pointer;
 }
+
 .faux-option.selected {
     background-color: #e9e9e9;
 }
 
+@media (max-width: 600px) {
+    a {
+        padding: 8px 10px;
+        font-size: 10px;
+    }
+}
+
+@media screen and (max-width: 700px) {
+
+    table th {
+        display: none;
+    }
+
+    table, thead, tbody, th, td, tr {
+        display: block;
+    }
+
+    table td {
+        position: relative;
+        padding-left: 50%;
+        text-align: left;
+        max-width: none;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        border: none;
+    }
+
+    table td:before {
+        position: absolute;
+        left: 10px;
+        width: 45%;
+        padding-right: 10px;
+        white-space: nowrap;
+        content: attr(data-label);
+        font-weight: bold;
+    }
+
+    table td {
+        padding: .5rem;
+        font-size: 0.8em;
+
+    }
+}
