--- a/views/dragons.hbs
+++ b/views/dragons.hbs
@@ -11,118 +11,10 @@ https://github.com/osu-cs340-ecampus/nodejs-starter-app/tree/main -->
         <title>Dragons</title>
         <link href="/css/style.css" rel="stylesheet" type="text/css">
         <script
-            src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" defer></script>
+            src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"
+            defer></script>
 
-        <script language="JavaScript">
-    function showform(dowhat) {
-        /*
-        * four DIVS: browse, insert, update, delete
-        * this function sets one visible the others not
-        */
-        if (dowhat == 'insert') {
-            document.getElementById('browse').style.display = 'none';
-            document.getElementById('insert').style.display = 'block';
-            document.getElementById('update').style.display = 'none';
-            document.getElementById('delete').style.display = 'none';
-        }
-        else if (dowhat == 'update') {
-            document.getElementById('browse').style.display = 'none';
-            document.getElementById('insert').style.display = 'none';
-            document.getElementById('update').style.display = 'block';
-            document.getElementById('delete').style.display = 'none';
-        }
-        else if (dowhat == 'delete') {
-            document.getElementById('browse').style.display = 'none';
-            document.getElementById('insert').style.display = 'none';
-            document.getElementById('update').style.display = 'none';
-           document.getElementById('delete').style.display = 'block';
-        }
-        else if (dowhat == 'all') {
-            document.getElementById('browse').style.display = 'block';
-            document.getElementById('insert').style.display = 'block';
-            document.getElementById('update').style.display = 'block';
-           document.getElementById('delete').style.display = 'block';
-        }
-        else { //by default display browse
-            document.getElementById('browse').style.display = 'block';
-            document.getElementById('insert').style.display = 'none';
-            document.getElementById('update').style.display = 'none';
-           document.getElementById('delete').style.display = 'none';
-        }
-    }
-
-
-    function newDragon() { showform('insert'); }
-    function updateDragon(pid) { showform('update'); }
-    function deleteDragon(pid) { showform('delete'); }
-    function browseDragons() { showform('browse'); }
-    function showAll() { showform('all'); }
-    function populateUpdateForm(dragonId) {
-        $.ajax({
-        url: `/dragons/${dragonId}`, // Adjust this URL to match your endpoint
-        type: 'GET',
-        success: function(data) {
-            // Clear previous Abilities
-            let abilitiesSelect = document.getElementById('input-abilities');
-            Array.from(abilitiesSelect.options).forEach(option => {
-                option.selected = false;
-            });
-
-            // Types Dropdown
-            let typeSelect = document.getElementById('input-type');
-            if (!data.type) {
-                Array.from(typeSelect.options).forEach(option => {
-                    if (option.value === "") { // "None" is a placeholder value for no type or NULL
-                        option.selected = true;
-                    }
-                });
-            } else {
-                Array.from(typeSelect.options).forEach(option => {
-                    if (option.text === data.type) {
-                        option.selected = true;
-                    }
-                });
-            }
-            
-            // Environments Dropdown
-             let environmentSelect = document.getElementById('input-environment');
-            Array.from(environmentSelect.options).forEach(option => {
-                if (option.text === data.environment) {
-                    option.selected = true;
-                }
-            });
-
-            document.getElementById('update-dragon-id').value = data.dragon_id;
-            document.getElementById('input-name').value = data.dragon_name;
-            document.getElementById('input-height').value = data.dragon_height;
-            document.getElementById('input-weight').value = data.dragon_weight;
-            document.getElementById('input-age').value = data.dragon_age;
-            document.getElementById('input-personality').value = data.dragon_personality;
-            document.getElementById('input-alignment').value = data.dragon_alignment;
-            document.getElementById('input-number_of_people_killed').value = data.number_of_people_killed;
-            document.getElementById('input-lore').value = data.dragon_lore;
-
-             // Abilities Select
-            let abilitiesArray = data.Abilities.split(', '); 
-            abilitiesArray.forEach(ability => {
-                for (let option of abilitiesSelect.options) {
-                    if (option.text.trim() === ability.trim()) {
-                        option.selected = true;
-                        break;
-                    }
-                }
-            });  
-            refreshFauxCheckboxesForSelect('input-abilities'); 
-        },
-        error: function(error) {
-            console.log('Error fetching dragon details:', error);
-        }
-    })
-    
-
-    document.getElementById('update').style.display = 'block';
-}
-</script>
+        <script src="./js/dragons/show_dragon_data.js" defer></script>
     </head>
 
     <body onload="browseDragons()">
@@ -132,10 +24,10 @@ https://github.com/osu-cs340-ecampus/nodejs-starter-app/tree/main -->
         <nav class="navbar">
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="dragons">Dragons</a></li>
-                <li><a href="types">Types</a></li>
                 <li><a href="abilities">Abilities</a></li>
                 <li><a href="environments">Environments</a></li>
+                <li><a href="types">Types</a></li>
+                <li><a href="dragons">Dragons</a></li>
             </ul>
         </nav>
 
@@ -157,8 +49,8 @@ https://github.com/osu-cs340-ecampus/nodejs-starter-app/tree/main -->
                         {{#each data.[0]}}
                         <th>{{@key}}</th>
                         {{/each}}
-                        <th>edit</th>
-                        <th>delete</th>
+                        <th>Edit</th>
+                        <th>Delete</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -177,10 +69,10 @@ https://github.com/osu-cs340-ecampus/nodejs-starter-app/tree/main -->
                         <td align="center">{{this.Number_of_People_Killed}}</td>
                         <td>{{this.Lore}}</td>
 
-                        <td><button class="edit-btn"
+                        <td align="center"><button class="edit-btn"
                                 onclick="populateUpdateForm('{{this.ID}}', '{{this.Name}}', '{{this.Type}}', '{{this.Height}}', '{{this.Weight}}', '{{this.Age}}', '{{this.Personality}}', '{{this.Alignment}}', '{{this.Environment}}', '{{this.Abilities}}', '{{this.Number_of_People_Killed}}', '{{this.Lore}}')">Edit
                                 Dragon</button></td>
-                        <td><button class="delete-btn"
+                        <td align="center"><button class="delete-btn"
                                 onclick="deleteDragon({{this.ID}})">Delete
                                 Dragon</button></td>
                     </tr>
@@ -237,9 +129,10 @@ https://github.com/osu-cs340-ecampus/nodejs-starter-app/tree/main -->
                             value="{{this.environment_id}}">{{this.environment_name}}</option>
                         {{/each}}
                     </select><br>
-                    <label>Abilities:</label><small>Multiple options can be searched for and selected.</small><br>
+                    <label>Abilities:</label><small>Multiple options can be
+                        searched for and selected.</small><br>
                     <select multiple
-                       id="add-input-abilities" name="abilities[]">
+                        id="add-input-abilities" name="abilities[]">
                         {{#each abilities}}
                         <option
                             value="{{this.ability_id}}">{{this.ability_name}}</option>
@@ -312,8 +205,9 @@ https://github.com/osu-cs340-ecampus/nodejs-starter-app/tree/main -->
                         {{/each}}
                     </select>
                     <br>
-                    <label>Abilities:</label><small> Multiple options can be searched for and selected.</small><br>
-                    <select multiple id="input-abilities" 
+                    <label>Abilities:</label><small> Multiple options can be
+                        searched for and selected.</small><br>
+                    <select multiple id="input-abilities"
                         name="abilities[]">
                         {{#each abilities}}
                         <option
