final push for part 5

--- a/views/dragons.hbs
+++ b/views/dragons.hbs
@@ -35,7 +35,7 @@ https://github.com/osu-cs340-ecampus/nodejs-starter-app/tree/main -->
         <div id="browse" style="display: block">
             {{!-- <p><a href="#" onClick="showAll()">Display all forms</a> </p>
             --}}
-            <p><strong>Browse Dragons</strong></p>
+            <h2><strong>Browse Dragons</strong></h2>
             <div class="new-button-container">
                 <button class="new-btn"
                     onclick="newDragon()">New Dragon</button>
@@ -104,7 +104,7 @@ https://github.com/osu-cs340-ecampus/nodejs-starter-app/tree/main -->
                     <label>Weight (lbs):</label> <input type="number" step=".1"
                         min="1"
                         name="dragon_weight" required><br>
-                    <label>Age:</label> <input type="number" min="0"
+                    <label>Age (yrs):</label> <input type="number" min="0"
                         name="dragon_age" required><br>
                     <label>Personality:</label> <input type="text"
                         name="dragon_personality" required><br>
@@ -179,7 +179,7 @@ https://github.com/osu-cs340-ecampus/nodejs-starter-app/tree/main -->
                     <label>Weight (lbs):</label> <input type="number" step=".1"
                         min="1"
                         id="input-weight" name="dragon_weight"><br>
-                    <label>Age:</label> <input type="number" id="input-age"
+                    <label>Age (yrs):</label> <input type="number" id="input-age"
                         min="0"
                         name="dragon_age"><br>
                     <label>Personality:</label> <input type="text"
