--- a/views/environments.hbs
+++ b/views/environments.hbs
@@ -90,7 +90,7 @@ Source URL: https://canvas.oregonstate.edu/courses/1946034/pages/exploration-web
         <div id="browse" style="display: block">
             {{!-- <p><a href="#" onClick="showAll()">Display all forms</a> </p>
             --}}
-            <p><strong>Browse Dragon Environments</strong></p>
+            <h2><strong>Browse Dragon Environments</strong></h2>
             <button class="new-btn"
                 onclick="newEnvironment()">New Environment</button>
             <table ID="environments-table">
