--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Cinzel&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap');
+
 /* Reset styles */
 html,
 body {
@@ -7,17 +10,21 @@ body {
     line-height: 1.5;
 }
 
-input, button, textarea, select {
-    font: inherit;
+body {
+    font-family: 'Lora', serif;
 }
+
 
 .navbar {
     text-align: center;
 }
 
-h1 {
+h1, h2, legend {
+    font-family: 'Cinzel', serif;
     text-align: center;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
+
 
 .navbar ul {
     list-style-type: none;
@@ -36,6 +43,17 @@ h1 {
     margin: 0 5px;
     border-radius: 1px;
     border-right: 1px solid black;
+}
+
+
+.navbar a:hover {
+    color: #333;
+    text-decoration: underline;
+    transition: all 0.3s ease;
+}
+
+.navbar li:last-child a {
+    border-right: none;
 }
 
 .img-container {
@@ -67,10 +85,6 @@ h1 {
     text-align: center;
 }
 
-.new-button-container {
-    border: none;
-    text-align: center;
-}
 
 .flex-container {
     display: flex;
@@ -80,45 +94,9 @@ h1 {
     text-align: center;
 }
 
-.new-btn {
-    background-color: green;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    border-radius: 5px;
-    margin-top: 10px;
-    margin: 10px auto;
-    display: block;
-}
-
-.edit-btn {
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    border-radius: 5px;
-    margin-top: 10px;
-    margin: 0 auto;
-}
-
-.delete-btn {
-    background-color: red;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    border-radius: 5px;
-    margin-top: 10px;
-    margin: 0 auto;
-}
-
-.edit-btn,
-.delete-btn {
-    padding: 6px 12px;
-    width: auto;
-    margin: 0;
+.navbar a, button, input[type="submit"], input[type="button"] {
+    text-transform: uppercase;
+    font-family: 'Lora', serif;
 }
 
 .abilities-multiple {
@@ -131,6 +109,13 @@ h1 {
     padding-right: 20px;
 }
 
+#dragons-table tbody tr td:nth-child(12) {
+    max-width: 200px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
 table {
     border-collapse: collapse;
     table-layout: auto;
@@ -139,23 +124,25 @@ table {
     overflow-x: auto;
 
     th {
+        font-family: 'Cinzel', serif;
+        font-size: 0.9rem;
         background-color: #333;
         color: #fff;
     }
 
     td {
-        overflow: hidden;
-        text-overflow: ellipsis;
+        font-family: 'Lora', serif;
+        font-size: 0.9rem;
         max-width: 200px;
-        height: auto;
-        white-space: nowrap;
+
     }
 
     th,
     td {
         border: 1px solid black;
-        padding: 0.4rem;
+        padding: 1rem;
         font-size: 0.9rem;
+
     }
 
     tbody tr:nth-child(odd) {
@@ -165,6 +152,17 @@ table {
     tbody tr:nth-child(even) {
         background-color: #e9e9e9;
     }
+
+    td:last-child {
+        text-align: center;
+        max-width: 120px;
+    }
+
+    td:nth-last-child(2) {
+        text-align: center;
+        max-width: 120px;
+    }
+
 }
 
 form {
@@ -178,6 +176,18 @@ label {
     margin-bottom: 10px;
 }
 
+button {
+    padding: 10px 20px;
+    box-sizing: border-box;
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: auto;
+    margin: 0 auto;
+    word-wrap: break-word;
+}
 
 input[type="text"],
 input[type="number"],
@@ -191,6 +201,7 @@ select {
     font-size: 16px;
 }
 
+.edit-btn,
 input[type="submit"],
 input[type="button"] {
     background-color: #007bff;
@@ -203,6 +214,43 @@ input[type="button"] {
     font-size: 18px;
 }
 
+.new-button-container {
+    border: none;
+    text-align: center;
+}
+
+.new-btn {
+    background-color: green;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+    margin-top: 10px;
+    margin: 10px auto;
+    display: block;
+    font-size: 18px;
+}
+
+.delete-btn {
+    background-color: red;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+    margin-top: 10px;
+    font-size: 18px;
+}
+
+.edit-btn,
+.delete-btn {
+    display: block;
+    text-align: center;
+    width: auto;
+    margin: 0 auto;
+}
+
 .btn-cancel {
     background-color: red !important;
     color: white;
@@ -213,16 +261,15 @@ input[type="button"] {
     background-color: rgb(121, 0, 0) !important;
     transform: scale(1.05);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    transition: all 0.3s ease;
 }
 
-button {
-    font-size: 14px;
-    white-space: nowrap;
-}
+
 
 button:hover {
     transform: scale(1.05);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    transition: all 0.3s ease;
 }
 
 input[type="submit"]:hover,
@@ -230,6 +277,7 @@ input[type="button"]:hover {
     background-color: #0056b3;
     transform: scale(1.05);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    transition: all 0.3s ease;
 }
 
 .error-message {
@@ -268,9 +316,11 @@ input[type="button"]:focus {
 }
 
 @media (max-width: 600px) {
-    a {
-        padding: 8px 10px;
-        font-size: 10px;
+    .navbar a {
+        padding: 8px;
+        margin: 0 2px;
+        font-size: max(7px, 2vw);
+        white-space: nowrap;
     }
 }
 
