--- a/views/abilities.hbs
+++ b/views/abilities.hbs
@@ -92,7 +92,7 @@ https://github.com/osu-cs340-ecampus/nodejs-starter-app/tree/main -->
         <div id="browse" style="display: block">
             {{!-- <p><a href="#" onClick="showAll()">Display all forms</a> </p>
             --}}
-            <p><strong>Browse Dragon Abilities</strong></p>
+            <h2><strong>Browse Dragon Abilities</strong></h2>
             <button class="new-btn"
                 onclick="newAbility()">New Ability</button>
             <table id="abilities-table">
